2005-03-13  Inge Wallin  <inge@lysator.liu.se>

	Clean out old cruft from the data editor.
	*  kchartDataEditor.{h,cc} (setLegend): removed
	(getLegend): removed
	(setXLabel): removed
	(getXLabel): removed
	* kchart_part.h (axisLabelText{short,long}): removed
	(m_longLabels, m_shortLabels): removed
	* kchart_view.cc (edit): remove all stuff within #if 0 - #endif
	
	----------------------------------------------------------------

	Fix problem with mixed plurals/singulars in chart names.
	* kchart_view.cc (KChartView): Rename some actions.

	The default chart is marked as modified even when it's not.
	* kchart_part.cc (KChartPart): Remove call to setModified().

2005-03-12  Inge Wallin  <inge@lysator.liu.se>

	Remove the defaults button from the config dialog.  It wasn't
	working anyway.
	* kchartConfigDialog.cc (KChartConfigDialog): Disable the Defaults
	button.

	----------------------------------------------------------------

	Grant wish 99391: Should be possible to select linear or
	logarithmic axes.
	* kchartParameterConfigPage.h (KChartParameterConfigPage::lin and
	log): new members
	* kchartParameterConfigPage.cc (KChartParameterConfigPage): Add
	new widgets to the Settings buttonbox (used to be Title)
	(init): initialize the members from the params.
	(apply): store the parameters from the values of the widgets

	----------------------------------------------------------------

	Fix the bad layout of the title buttonbox.
	* kchartParameterConfigPage.cc (KChartParameterConfigPage): Change
	the layout slightly, and add row and col stretch.

	----------------------------------------------------------------

	Load row and column headers from XML file.
	* kchart_part.cc (loadXML): Get the legend and axis label strings
	from the KDChart parameters and store in the column and row
	headers.

	Lots of code cleaning and added comments.

	----------------------------------------------------------------

	Clean up the data editor and remove old cruft.